# Connect-4-w-Neural-Network

./: .gitignore  CMakeLists.txt  README.md  agent.cpp  agent.hpp  board.cpp  board.hpp  main.cpp  network.cpp  network.hpp  neuron.cpp  neuron.hpp  opponent.cpp  opponent.hpp
GNN/include/: agent.hpp  network.hpp
include/: agent.hpp  board.hpp  layer.hpp  network.hpp  neuron.hpp  opponent.hpp
include/GNN/: GenNet.hpp  agent.hpp  layer.hpp  network.hpp  neuron.hpp
src/: agent.cpp  board.cpp  layer.cpp  network.cpp  neuron.cpp  opponent.cpp
